--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="section-header text-center" data-aos="fade-up" data-aos-duration="1000">
+                        <div class="section-header text-center" data-aos-delay="100" data-aos-duration="800" data-aos-offset="100">
                             <h2 class="section-title wow fadeInUp" data-wow-delay=".3s">My Skills</h2>
                             <p class=" wow fadeInUp" data-wow-delay=".4s">We put your ideas and thus your wishes in the
                                 form of a unique web project that inspires
@@ -814,7 +814,7 @@
                     </div>
                 </div>
 
-                <div class="row" id="about" data-aos="fade-up" data-aos-duration="1000">
+                <div class="row" id="about" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800" data-aos-offset="100">
                     <div class="col-md-12">
                         <div class="skills-widget d-flex flex-wrap justify-content-center align-items-center">
                             <div class="skill-item wow fadeInUp" data-wow-delay=".3s">
@@ -882,7 +882,7 @@
         <section class="contact-section" id="contact-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-md-7 order-2 order-md-1" data-aos="fade-left" data-aos-delay="100" data-aos-duration="1200" data-aos-offset="200">
+                    <div class="col-lg-6 col-md-7 order-2 order-md-1" data-aos="fade-left" data-aos-delay="100" data-aos-duration="800" data-aos-offset="100">
                         <div class="contact-form-box">
                             <div class="section-header">
                                 <h2 class="section-title">Let’s work together!</h2>
@@ -935,7 +935,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-5 offset-lg-1 col-md-5  d-flex flex-wrap align-items-center  order-1 order-md-2" data-aos="fade-right" data-aos-delay="200" data-aos-duration="1000">
+                    <div class="col-lg-5 offset-lg-1 col-md-5  d-flex flex-wrap align-items-center  order-1 order-md-2" data-aos="fade-right" data-aos-delay="100" data-aos-duration="800" data-aos-offset="100">
                         <div class="contact-info-list">
                             <ul class="ul-reset">
                                 <li class="d-flex flex-wrap align-items-center position-relative wow fadeInRight"
@@ -1023,7 +1023,7 @@
                         </ul>
                     </div>
                     <div class="copy-text">
-                        <p>&copy; 2024 All rights reserved</p>
+                        <p>&copy; 2025 All rights reserved</p>
                     </div>
                 </div>
             </div>
@@ -1070,7 +1070,9 @@
       <script src="https://unpkg.com/lottie-web/build/player/lottie.min.js"></script>
     <script>
   AOS.init();
-    lottie.loadAnimation({
+</script>
+<script>
+      lottie.loadAnimation({
       container: document.getElementById('lottie-hero'),
       renderer: 'svg',
       loop: true,
