--- a/index.html
+++ b/index.html
@@ -802,11 +802,11 @@
         <!-- SKILLS SECTION START -->
         <section class="skills-section" id="skills-section">
             <div class="container">
-                <div class="row">
+                <div class="row" data-aos="fade-up">
                     <div class="col-md-12">
-                        <div class="section-header text-center" data-aos-delay="100" data-aos-duration="800" data-aos-offset="100">
-                            <h2 class="section-title wow fadeInUp" data-wow-delay=".3s">My Skills</h2>
-                            <p class=" wow fadeInUp" data-wow-delay=".4s">We put your ideas and thus your wishes in the
+                        <div class="section-header text-center">
+                            <h2 class="section-title wow fadeInUp">My Skills</h2>
+                            <p>We put your ideas and thus your wishes in the
                                 form of a unique web project that inspires
                                 you
                                 and you customers.</p>
@@ -814,10 +814,10 @@
                     </div>
                 </div>
 
-                <div class="row" id="about" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800" data-aos-offset="100">
+                <div class="row" id="about" data-aos="fade-up">
                     <div class="col-md-12">
                         <div class="skills-widget d-flex flex-wrap justify-content-center align-items-center">
-                            <div class="skill-item wow fadeInUp" data-wow-delay=".3s">
+                            <div class="skill-item">
                                 <div class="skill-inner">
                                     <div class="icon-box">
                                         <img src="img/figma.svg" alt="">
@@ -882,7 +882,7 @@
         <section class="contact-section" id="contact-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-md-7 order-2 order-md-1" data-aos="fade-left" data-aos-delay="100" data-aos-duration="800" data-aos-offset="100">
+                    <div class="col-lg-6 col-md-7 order-2 order-md-1" data-aos="fade-left">
                         <div class="contact-form-box">
                             <div class="section-header">
                                 <h2 class="section-title">Let’s work together!</h2>
@@ -935,7 +935,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-5 offset-lg-1 col-md-5  d-flex flex-wrap align-items-center  order-1 order-md-2" data-aos="fade-right" data-aos-delay="100" data-aos-duration="800" data-aos-offset="100">
+                    <div class="col-lg-5 offset-lg-1 col-md-5  d-flex flex-wrap align-items-center  order-1 order-md-2" data-aos="fade-right">
                         <div class="contact-info-list">
                             <ul class="ul-reset">
                                 <li class="d-flex flex-wrap align-items-center position-relative wow fadeInRight"
