--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
                             <p class="lead">Expert in UI/UX design and web development, blending creativity with
                                 functionality to deliver engaging user-centric solutions.</p>
                             <div class="button-box d-flex flex-wrap align-items-center">
-                                <a href="img/Resume-vishnu.pdf" target="_blank" class="btn tj-btn-secondary"
-                                    download="">Download
+                                <a href="Resume-vishnu.pdf" target="_blank" class="btn tj-btn-secondary"
+                                    download>Download
                                     CV <i class="flaticon-download"></i></a>
 
                             </div>
